fix menu position and z-index

--- a/styles/components/_menu.scss
+++ b/styles/components/_menu.scss
@@ -1,7 +1,8 @@
 .menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: -100vw;
+  z-index: 1;
   width: 100%;
   min-height: 100vh;
   background-color: $dark;
@@ -14,7 +15,7 @@
   }
 
   &__list {
-    margin: 190px 32px 0;
+    margin: 138px 32px 0;
   }
 
   &__item {
