--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,9 +31,10 @@ body {
 }
 
 .menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: -100vw;
+  z-index: 1;
   width: 100%;
   min-height: 100vh;
   background-color: #232340;
@@ -45,7 +46,7 @@ body {
   left: 0;
 }
 .menu__list {
-  margin: 190px 32px 0;
+  margin: 138px 32px 0;
 }
 .menu__item {
   margin-bottom: 40px;
